# audio-to-diagram

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  start.sh
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/websocket/: audio_ws.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  records.py
backend/app/prompts/diagram_planner/: system.txt
backend/app/prompts/domain_filter/: system.txt
backend/app/prompts/svg_generation/: system.txt
backend/app/prompts/visualization_decision/: system.txt
backend/app/schemas/: analysis.py  common.py  diagram_plan.py  svg.py  transcript.py  websocket.py
backend/app/services/analysis/: diagram_planner_service.py  domain_filter_service.py  quality_check_service.py  text_normalizer.py  visualization_decision_service.py
backend/app/services/audio/: chunk_buffer.py  utterance_segmenter.py  vad_service.py
backend/app/services/generation/: svg_generator_service.py  svg_sanitizer.py
backend/app/services/llm/: openai_provider.py  provider_base.py
backend/app/services/orchestration/: fallback_manager.py  realtime_pipeline.py  task_router.py
backend/app/services/storage/: pipeline_logger.py
backend/app/services/stt/: stt_service.py
backend/app/tests/integration/: test_ws_pipeline.py
backend/app/tests/unit/: test_diagram_planner.py  test_svg_sanitizer.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
(+1 files in other folders)
